fixing layout bugs

--- a/src/assets/scss/components/_editor-image.scss
+++ b/src/assets/scss/components/_editor-image.scss
@@ -1,28 +1,3 @@
-// .container-editor-images{
-//     background: lightblue;
-//     display: flex;
-//     justify-content: space-around;
-//     padding: 50px;
-//     margin-top: 95px;
-//     margin-bottom: 30px;
-
-//     .gallery-editor{
-//         display: grid;
-//         grid-gap: 15px;
-//         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-//         grid-auto-rows: 350px 350px;
-//         grid-auto-flow: dense;
-
-//         img{
-//             width: 100%;
-//             height: 100%;
-//             display: flex;
-//             justify-content: center;
-//             align-items: center;
-//         }
-//     }
-
-// }
 .container-editor-images {
   display: grid;
   grid-gap: 0.5rem;
@@ -40,13 +15,16 @@
 
   grid-template-columns: repeat(
     6,
-    2fr
+    1fr
   ); 
 
-  grid-template-rows: 1fr 2fr 1fr 1fr;
+  grid-template-rows: 0.5fr 1fr 0.5fr 0.5fr;
   grid-template-areas:
-    "grid-0 grid-1"
-    "grid-0 grid-1"
+    ". . . . . ."
+    "grid-0 grid-0 grid-0 grid-1 grid-1 grid-1"
+    "grid-0 grid-0 grid-0 grid-1 grid-1 grid-1"
+    "grid-2 grid-2 grid-2 grid-3 grid-3 grid-3"
+    
    ;
 
 
